<resources>
    <string name="app_name">Prayer Times</string>
    <string name="perm_denied">Permission denied</string>
    <string name="perm_denied_desc">Allow access to your location so the app works correctly</string>
    <string name="settings">Settings</string>
    <string name="failed">Failed</string>
    <string name="error_load_times">An error occurred when loading prayer times</string>
    <string name="edit_location">Edit location</string>
    <string name="retry">Retry</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="edit_date">Date</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="auto">Auto</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="cancel">Cancel</string>
    <string name="sunrise">Sunrise</string>
    <string name="lat_lon">%1$f, %2$f</string>
    <string name="title_activity_settings">Settings</string>
    <string name="calculation">Calculation</string>
    <string name="home">Home</string>
    <string name="calculation_method">Calculation Method</string>
    <string name="adjustment">Adjustment</string>
    <string name="search">Search… (experimental)</string>
    <string name="tz_info_text">Times in device time zone</string>
    <string name="m_1">Al-Muḥarram</string>
    <string name="m_2">Ṣafar</string>
    <string name="m_3">Rabīʿ al-ʾAwwal</string>
    <string name="m_4">Rabīʿ ath-Thānī</string>
    <string name="m_5">Jumadā al-ʾŪlā</string>
    <string name="m_6">Jumādā ath-Thāniyah</string>
    <string name="m_7">Rajab</string>
    <string name="m_8">Shaʿbān</string>
    <string name="m_9">Ramaḍān</string>
    <string name="m_10">Shawwāl</string>
    <string name="m_11">Ḏū al-Qaʿdah</string>
    <string name="m_12">Ḏū al-Ḥijjah</string>
    <string name="adj_desc">Adjust the generated prayer times by adding a few minutes to the result. Negative values are accepted.</string>
</resources>