<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp">

                <TextView
                    android:id="@+id/date"
                    style="@style/TextAppearance.Material3.HeadlineLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/loc"
                    style="@style/TextAppearance.Material3.LabelLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/main_frag"
                android:name="io.ta.waktushalat.TiFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp">

        <Button
            android:id="@+id/editloc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/location"
            app:icon="@drawable/ic_baseline_location_on_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tangg"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tangg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/edit_date"
            app:icon="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintEnd_toStartOf="@+id/editloc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tz_info_text"
        android:textAlignment="center" />
</androidx.appcompat.widget.LinearLayoutCompat>